[project]
name = "clab-io-draw"
version = "0.4.1"
description = "Convert between draw.io and containerlab topology files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "n2g==0.3.3",
    "prompt-toolkit==3.0.43",
    "PyYAML==6.0.1",
    "six==1.16.0",
    "wcwidth==0.2.13",
    "ruamel-yaml==0.18.6",
    "textual-dev==1.7.0",
    "textual==1.0.0",
]

[tool.setuptools.packages.find]
include = ["clab_io_draw*"]

[project.scripts]
clab2drawio = "clab_io_draw.clab2drawio:cli"
drawio2clab = "clab_io_draw.drawio2clab:cli"

